--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <string name="hello">Hello World, ExhibitionActivity!</string>
-    <string name="app_name">Filbert</string>
+<resources>    
+    <string name="app_name">Filbert</string>    
+    <string name="camera_activity">Camera Activity</string>    
 </resources>
